{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 13,
  "lineage": "c52b61a9-31b7-6827-b5b6-c252910cce35",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "networkinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/networkinterface",
            "internal_domain_name_suffix": "jtq0z5xtqaderkfbgvubj5mzgc.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "interne",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/publicip",
                "subnet_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1"
              }
            ],
            "location": "australiaeast",
            "name": "networkinterface",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.terraform",
            "azurerm_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "linux-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg",
            "location": "australiaeast",
            "name": "linux-vm-nsg",
            "resource_group_name": "terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow HTTP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow SSH",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow HTTP",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "linux-vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terraform",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.linux-vm-nsg",
            "azurerm_resource_group.terraform",
            "azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow SSH",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "linux-vm-nsg",
            "priority": 150,
            "protocol": "Tcp",
            "resource_group_name": "terraform",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.linux-vm-nsg",
            "azurerm_resource_group.terraform",
            "azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.5.104.37",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "publicip",
            "resource_group_name": "terraform",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "terraform",
            "virtual_network_name": "net1"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "linux-vm-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1",
            "network_security_group_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg",
            "subnet_id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.linux-vm-nsg",
            "azurerm_resource_group.terraform",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.net1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "net1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "feace14c-80f3-4806-a8a1-356814fd9932",
            "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1",
            "location": "australiaeast",
            "name": "net1",
            "resource_group_name": "terraform",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/net1/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/799be9fd-0f40-4fa4-8eb0-b7e881bb24f1/resourceGroups/terraform/providers/Microsoft.Network/networkSecurityGroups/linux-vm-nsg"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.terraform"
          ]
        }
      ]
    }
  ]
}